adding css attributes to html code

--- a/index.html
+++ b/index.html
@@ -5,25 +5,23 @@
   <title>Lab 2</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" media="screen" href="css/style.css" />
 </head>
   <body>
-    <div id="form">
       <form method="get"action= "#null" autocomplete="on">
-        <h2>Personal Information Request Form</h2>
+        <h1>Personal Information Request Form</h1>
           <fieldset>
             <legend>Please fill out the following information.</legend>
             <label>Full Name:</label>
-            <input class="form_input" type="text" name="form_input" placeholder="John Smith">
+            <input class="forminput" type="text" name="form_input" placeholder="John Smith">
 
             <label>Email Adress:</label>
-            <input class="form_input" type="text" name="form_input" placeholder="jsmith@gmail.com">
+            <input class="forminput" type="text" name="form_input" placeholder="jsmith@gmail.com">
 
             <label>Date of Birth:</label>
-            <input class="form_input" type="text" name="form_input" placeholder="mm/dd/yyyy">
+            <input class="forminput" type="text" name="form_input" placeholder="mm/dd/yyyy">
+            <button id="button">Submit</button>
           </fieldset>
       </form>
-      <button id="button">Submit</button>
-    </div>
   </body>
 </html>
