added the request for phone number

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <label>Email Adress:</label>
             <input class="forminput" type="text" name="form_input" placeholder="jsmith@gmail.com">
 
+            <label>Phone Number:</label>
+            <input class="forminput" type="text" name="form_input" placeholder="111-222-333">
+
             <label>Date of Birth:</label>
             <input class="forminput" type="text" name="form_input" placeholder="mm/dd/yyyy">
             <button id="button">Submit</button>
