--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf 8"/>
+  <meta charset="utf 8">
   <title>Lab 2</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css" />
@@ -9,7 +9,7 @@
 </head>
   <body>
         <h1>Personal Information Request Form</h1>
-        <form method="get"action= "#null" autocomplete="on">
+        <form method="get" action= "#null" autocomplete="on">
           <fieldset>
             <legend>Please fill out the following information.</legend>
             <label>Full Name:</label>
