--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf 8">
   <title>Lab 2</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
-  <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css" />
-  <link rel="stylesheet" media="screen" href="css/style.css" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
+  <link rel="stylesheet" media="screen" href="css/meyersreset-and-normalize-form.css">
+  <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
   <body>
         <h1>Personal Information Request Form</h1>
